refactoring code, add register.go, auth, table with users
