# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API service to generate report",
-        "title": "Generate Report API",
+        "description": "API service to generate report based on monthly sales",
+        "title": "Generating Report API",
         "contact": {},
         "version": "1.0"
     },
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_DmitriyKolesnikM8O_Practice24_internal_auth.User"
+                            "$ref": "#/definitions/github_com_DmitriyKolesnikM8O_Practice24_internal_repository_auth.UserLogin"
                         }
                     }
                 ],
@@ -121,7 +121,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_product.UpdateProduct"
+                            "$ref": "#/definitions/github_com_DmitriyKolesnikM8O_Practice24_internal_repository_product_model.UpdateProduct"
                         }
                     }
                 ],
@@ -159,7 +159,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_product.CreateProduct"
+                            "$ref": "#/definitions/github_com_DmitriyKolesnikM8O_Practice24_internal_repository_product_model.CreateProduct"
                         }
                     }
                 ],
@@ -203,6 +203,41 @@
                 }
             }
         },
+        "/register": {
+            "post": {
+                "description": "new user in table",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "register User",
+                "operationId": "register",
+                "parameters": [
+                    {
+                        "description": "Product information",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_DmitriyKolesnikM8O_Practice24_internal_repository_auth.UserRegister"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/report": {
             "get": {
                 "security": [
@@ -234,7 +269,7 @@
         }
     },
     "definitions": {
-        "github_com_DmitriyKolesnikM8O_Practice24_internal_auth.User": {
+        "github_com_DmitriyKolesnikM8O_Practice24_internal_repository_auth.UserLogin": {
             "type": "object",
             "properties": {
                 "password": {
@@ -245,7 +280,18 @@
                 }
             }
         },
-        "internal_product.CreateProduct": {
+        "github_com_DmitriyKolesnikM8O_Practice24_internal_repository_auth.UserRegister": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_DmitriyKolesnikM8O_Practice24_internal_repository_product_model.CreateProduct": {
             "type": "object",
             "properties": {
                 "count": {
@@ -262,7 +308,7 @@
                 }
             }
         },
-        "internal_product.UpdateProduct": {
+        "github_com_DmitriyKolesnikM8O_Practice24_internal_repository_product_model.UpdateProduct": {
             "type": "object",
             "properties": {
                 "count": {
