# internal/handler/auth/model.go
@@ -1,7 +1,0 @@
-package auth
-
-// TODO HashPassword
-type User struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
-}
