# internal/handler/product/handlers/auth.go
@@ -1,10 +1,12 @@
 package handlers
 
 import (
+	"context"
 	"encoding/json"
 	"fmt"
-	"github.com/DmitriyKolesnikM8O/Practice24/internal/handler/auth"
 	"github.com/DmitriyKolesnikM8O/Practice24/internal/jwt"
+	"github.com/DmitriyKolesnikM8O/Practice24/internal/repository/auth"
+	"golang.org/x/crypto/bcrypt"
 	"net/http"
 )
 
@@ -14,37 +16,43 @@ import (
 // @ID auth
 // @Accept json
 // @Produce json
-// @Param user body auth.User true "Username and password"
+// @Param user body auth.UserLogin true "Username and password"
 // @Success 200
 // @Failure 400
 // @Router /auth [post]
 func (h *handler) Auth(w http.ResponseWriter, r *http.Request) error {
-
-	var u auth.User
-	if err := json.NewDecoder(r.Body).Decode(&u); err != nil {
+	var user auth.UserLogin
+	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		h.logger.Error(err)
 		return err
 	}
-	defer r.Body.Close()
 
-	if u.Username != "admin" || u.Password != "admin" {
-		h.logger.Error("Invalid username or password")
-		w.WriteHeader(http.StatusOK)
-		w.Write([]byte("Invalid username or password"))
+	defer r.Body.Close()
+	username, _ := h.repository.FindOneOnUsersTable(context.Background(), user.Username)
+	if username == "" {
+		w.Write([]byte("User not found"))
 		return nil
 	}
 
-	token, err := jwt.GenerateJWT(u.Username)
+	userFromTable, _ := h.repository.FindOneUser(context.Background(), username)
+	err := bcrypt.CompareHashAndPassword(userFromTable.Password, []byte(user.Password))
+	if err != nil {
+		w.WriteHeader(400)
+		w.Write([]byte("Incorrect password"))
+		return err
+	}
+
+	token, err := jwt.GenerateJWT(user.Username)
 	if err != nil {
 		h.logger.Error("Failed to generate token")
 		w.WriteHeader(http.StatusInternalServerError)
 		return err
 	}
+
 	w.Header().Set("Authorization", "Bearer "+token)
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte(fmt.Sprintf(`{"token":"%s"}`, token)))
 
 	return nil
-
 }
