# internal/handler/product/handlers/updateByID.go
@@ -5,6 +5,7 @@ import (
 	"encoding/json"
 	"github.com/DmitriyKolesnikM8O/Practice24/internal/repository/product/model"
 	"net/http"
+	"strconv"
 )
 
 // @Summary UpdateProductByID
@@ -13,7 +14,7 @@ import (
 // @Description update product by ID
 // @ID update-product
 // @Accept json
-// @Param information body UpdateProduct true "Product information"
+// @Param information body model.UpdateProduct true "Product information"
 // @Success 200
 // @Failure 400
 // @Router /products [put]
@@ -24,13 +25,22 @@ func (h *handler) UpdateByID(w http.ResponseWriter, r *http.Request) error {
 		w.WriteHeader(http.StatusBadRequest)
 		h.logger.Error("Failed to unmarshal product for update")
 	}
-	err := h.repository.Update(context.TODO(), dto)
+
+	productFromTable, _ := h.repository.FindOne(context.Background(), strconv.Itoa(dto.ID))
+	if productFromTable.Name == "" {
+		w.WriteHeader(http.StatusNotFound)
+		h.logger.Error("Product not found")
+		return nil
+	}
+
+	err := h.repository.Update(context.Background(), dto)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		h.logger.Error("Failed to update product")
 		return err
-
 	}
+
 	w.WriteHeader(http.StatusNoContent)
+
 	return nil
 }
