# internal/handler/product/url/url.go
@@ -5,5 +5,7 @@ const (
 	ProductURL  = "/products/:id"
 	ReportURL   = "/report"
 	AuthURL     = "/auth"
-	DeleteUrl   = "/delete/:id"
+	DeleteURL   = "/delete/:id"
+	SwaggerURL  = "http://0.0.0.0:1234/swagger/doc.json"
+	RegisterURL = "/register"
 )
